<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/width_height_item_square"
    android:layout_height="wrap_content"
    android:contentDescription="@string/item_1x1_label">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/labelImageView"
        android:layout_width="@dimen/width_height_icon_square"
        android:layout_height="@dimen/width_height_icon_square"
        android:contentDescription="@string/today_imageview_1x1_label"
        android:scaleType="centerCrop"
        android:src="@mipmap/placeholder_trueidwhite_square"
        app:layout_constraintBottom_toTopOf="@id/titleTextView"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleTextView"
        style="@style/TrueID.TinySmall.Black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_1"
        android:contentDescription="@string/today_textview_1x1_label_title"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:lines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelImageView"
        tools:text="Shopping" />

</androidx.constraintlayout.widget.ConstraintLayout>
