<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/headerHorizontalLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/fullRedemptionImageView"
        android:layout_width="78dp"
        android:layout_height="16dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/watch_imageview_full_redemption"
        android:scaleType="fitStart"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/TrueID.ShelfHeader"
        android:layout_marginVertical="@dimen/spacing_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullRedemptionImageView">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleTextView"
            style="@style/TrueID.Header2.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/today_textview_header_title"
            android:ellipsize="end"
            android:lines="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/seeMoreHeaderView"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Highlight" />

        <LinearLayout
            android:id="@+id/seeMoreHeaderView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/today_button_seeall"
            android:gravity="end"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/seeMoreTextView"
                style="@style/TrueID.Body.DisableGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/seeMoreImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                app:tint="@color/grey_300" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
