<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/TrueID.Frame.Square.Product">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/TrueID.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/thumbnailImageView"
                style="@style/TrueID.CardView.ImageSquare"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/today_imageview_1x1_shopping"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tagDiscountTextView"
                style="@style/TrueID.ExtraSmall.White.Tag.Discount"
                android:layout_margin="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="15%" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleTextView"
        style="@style/TrueID.Body.Bold.Black.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/today_textview_1x1_shopping_title"
        app:layout_constraintBottom_toTopOf="@+id/titleDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Iphone" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleDescription"
        style="@style/TrueID.Body.Black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/today_textview_1x1_shopping_title_description"
        app:layout_constraintBottom_toTopOf="@+id/subTitleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        tools:text="13507 WHITE" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/subTitleTextView"
        style="@style/TrueID.Small.Bold.Black.TagPrice"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/today_textview_1x1_shopping_subtitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleDescription"
        tools:text="Buy $1,0000" />
</androidx.constraintlayout.widget.ConstraintLayout>
