<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/searchMaterialCardView"
        style="?attr/csb_card_style"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/spacing_4"
        android:layout_marginTop="@dimen/spacing_2"
        android:layout_marginEnd="@dimen/spacing_4"
        android:layout_marginBottom="@dimen/spacing_2"
        android:contentDescription="@string/search_box">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView style="?attr/csb_ic_search_style" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/searchTextView"
                style="?attr/csb_title_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spacing_2"
                android:layout_marginBottom="@dimen/spacing_2"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editSearchTextView"
                style="?attr/csb_title_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spacing_2"
                android:layout_marginBottom="@dimen/spacing_2"
                android:layout_weight="1"
                android:background="@drawable/bg_search_white_with_corners"
                android:contentDescription="@string/search_input"
                android:cursorVisible="true"
                android:gravity="center_vertical"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:textCursorDrawable="@null"
                android:visibility="gone">

                <requestFocus />
            </androidx.appcompat.widget.AppCompatEditText>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/scanAppCompatImageView"
                style="?attr/csb_ic_scan_style"
                android:contentDescription="@string/scanner_icon" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/closeAppCompatImageView"
                style="?attr/csb_ic_close_style"
                android:contentDescription="@string/close_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/spacing_3"
            android:paddingTop="@dimen/spacing_2"
            android:paddingEnd="@dimen/spacing_3"
            android:paddingBottom="@dimen/spacing_2">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                android:gravity="center_vertical"
                android:visibility="gone" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</FrameLayout>
